--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,9 @@ dependencies {
     implementation 'com.codepath.libraries:android-oauth-handler:1.3.1'
     implementation 'com.android.support:appcompat-v7:27.1.0'
     // Glide for remote image loading
-    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     // Android Async Http for sending async network requests
     implementation 'com.loopj.android:android-async-http:1.4.9'
     // Room for simple persistence with an ORM
